[gd_scene load_steps=2 format=3 uid="uid://multiplayer_lobby"]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.03, 0.08, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 36
text = "CO-OP LOBBY"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ModeSelect" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="HostButton" type="Button" parent="VBox/ModeSelect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="VBox/ModeSelect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "JOIN GAME"

[node name="HostPanel" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="PortLabel" type="Label" parent="VBox/HostPanel"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="VBox/HostPanel"]
layout_mode = 2
placeholder_text = "7777"
text = "7777"

[node name="StartHostButton" type="Button" parent="VBox/HostPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "START SERVER"

[node name="JoinPanel" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddressLabel" type="Label" parent="VBox/JoinPanel"]
layout_mode = 2
text = "Host IP Address:"

[node name="AddressInput" type="LineEdit" parent="VBox/JoinPanel"]
layout_mode = 2
placeholder_text = "192.168.1.x"
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="VBox/JoinPanel"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="VBox/JoinPanel"]
layout_mode = 2
placeholder_text = "7777"
text = "7777"

[node name="ConnectButton" type="Button" parent="VBox/JoinPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "CONNECT"

[node name="LobbyPanel" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="VBox/LobbyPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
text = "Connected!"
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="VBox/LobbyPanel"]
layout_mode = 2

[node name="PlayerListLabel" type="Label" parent="VBox/LobbyPanel/PlayerList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Players:"

[node name="ReadyButton" type="Button" parent="VBox/LobbyPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "READY"
toggle_mode = true

[node name="StartGameButton" type="Button" parent="VBox/LobbyPanel"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "START GAME"

[node name="DisconnectButton" type="Button" parent="VBox/LobbyPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "DISCONNECT"

[node name="Separator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Back to Menu"
